--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
-    "name": "enhanced-easyproject",
-    "version": "1.0.0",
-    "private": true,
+    "name": "enhanced-easy-project",
+    "version": "1.0.2",
+    "description": "UserScripty pro vylepšení použitého produktu EasyProject pro konkrétní implementaci https://creasoft.easyproject.cz/.",
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/RaptorCZ/enhanced-easy-project.git"
+    },
     "author": {
         "name": "Raptor"
     },
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/RaptorCZ/enhanced-easy-project/issues"
+    },
+    "homepage": "https://github.com/RaptorCZ/enhanced-easy-project",
+    "private": true,
+    "scripts": {
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+        "build": "gulp",
+        "version": "npm run build && npm run changelog && git add -A",
+        "postversion": "git push && git push --tags"
+    },
     "devDependencies": {
         "autoprefixer": "^9.4.9",
+        "conventional-changelog-angular": "^5.0.3",
+        "conventional-changelog-cli": "^2.0.12",
         "fs": "0.0.1-security",
         "gulp": "^4.0.0",
         "gulp-concat": "^2.6.1",
