--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "autoprefixer": "^9.6.1",
         "conventional-changelog-angular": "^5.0.3",
         "conventional-changelog-cli": "^2.0.23",
+        "eslint": "^6.3.0",
         "fs": "0.0.1-security",
         "gulp": "^4.0.2",
         "gulp-concat": "^2.6.1",
